@@ -1,3 +1,12 @@
+2014-11-21  Alexandre Oliva <aoliva@redhat.com>
+
+	[BZ #14498]
+	* NEWS: Fixed.
+	* nss/nss_db/db-XXX.c (_nss_db_get##name##_r): Update hidx
+	after parsing line but before break_if_match.
+	* nss/nss_files/files-service (DB_LOOKUP): Don't "continue;"
+	if there is a protocol mismatch.
+
 2014-11-21  Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
 
 	* manual/sysinfo.texi (addmntent): It is actually MT-Safe,
